@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-07-26T16:21:33Z",
+  "timestamp" : "2022-07-27T01:41:09Z",
   "count_outdated" : 655,
   "uniques_outdated" : 230,
-  "count" : 678,
-  "uniques" : 245,
+  "count" : 679,
+  "uniques" : 246,
   "views" : [
     {
       "timestamp": "2022-07-13T00:00:00Z",
@@ -77,10 +77,10 @@
     },
     {
       "timestamp": "2022-07-26T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ]
     }
   ]
 }
