@@ -1,6 +1,6 @@
 {
-  "count": 23,
-  "uniques": 13,
+  "count": 24,
+  "uniques": 14,
   "views": [
     {
       "timestamp": "2022-07-13T00:00:00Z",
@@ -54,8 +54,8 @@
     },
     {
       "timestamp": "2022-07-26T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
