@@ -1,3 +1,10 @@
+2022-07-27T01:41:09Z:
+* notice: last 14d: unq all: 14 24
+* notice: prev accum: outdated-unq outdated-all / unq all: 230 655 / 245 678
+* notice: next accum: outdated-unq outdated-all / unq all: 230 655 / 246 679
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +2 +2 -0 -0 / 2 2
+* notice: removed / changed dates: [] / [2022-07-26]
+
 2022-07-26T16:21:33Z:
 * notice: last 14d: unq all: 13 23
 * notice: prev accum: outdated-unq outdated-all / unq all: 229 651 / 244 677
